# types-httpretty

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  stubtest_allowlist.txt
.github/workflows/: ci.yml  release.yml
httpretty-stubs/: __init__.pyi  compat.pyi  core.pyi  errors.pyi  http.pyi
tests/: __init__.py  test_runtime.py
tests/typecheck/: __init__.py  check_usage.py
